--- a/css/home-page.css
+++ b/css/home-page.css
@@ -80,14 +80,21 @@ a {
   display: flex;
   flex-wrap: wrap;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1300px) {
   .header-buttons {
-    display: none;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
   }
 }
 @media screen and (max-width: 1100px) {
   .header-buttons {
     margin-left: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header-buttons {
+    display: none;
   }
 }
 .header-buttons a {
@@ -98,10 +105,15 @@ a {
   border-radius: 10px;
   outline: none;
 }
+@media screen and (max-width: 1300px) {
+  .header-buttons a {
+    margin-top: 5px;
+    text-align: center;
+  }
+}
 @media screen and (max-width: 1100px) {
   .header-buttons a {
     padding: 5px;
-    margin-top: 5px;
   }
 }
 .header-mobicon {
@@ -184,6 +196,12 @@ a {
   padding: 5px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-input {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+}
 .header-links .navigation-input img {
   width: 15px;
   position: absolute;
@@ -196,13 +214,22 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.5);
   outline: none;
   padding-left: 30px;
-  padding-right: 30px;
   color: rgba(0, 0, 0, 0.5);
+}
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-input input {
+    width: 150px;
+  }
 }
 .header-links .navigation-language {
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-language {
+    margin-top: 10px;
+  }
 }
 .header-links .navigation-language img {
   margin-left: 5px;
@@ -398,6 +425,11 @@ a {
 @media screen and (max-width: 1100px) {
   .footer-rteco__logo .rteco-logo {
     margin-left: 50px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .footer-rteco__logo .rteco-logo img {
+    width: 90%;
   }
 }
 .footer-rteco__logo .rteco-logo .color-logo {
@@ -743,7 +775,7 @@ a {
 }
 @media screen and (max-width: 500px) {
   .advantages-content__list {
-    max-width: 450px;
+    max-width: 300px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -821,7 +853,7 @@ a {
 }
 @media screen and (max-width: 500px) {
   .partners-logo {
-    width: 400px;
+    width: 300px;
     flex-wrap: nowrap;
     overflow-y: auto;
     overflow-wrap: normal;
@@ -850,7 +882,7 @@ a {
 }
 @media screen and (max-width: 500px) {
   .licenses-content {
-    width: 400px;
+    width: 300px;
     overflow-y: auto;
   }
 }
@@ -914,6 +946,11 @@ a {
     justify-content: space-evenly;
   }
 }
+@media screen and (max-width: 1100px) {
+  .request {
+    justify-content: flex-start;
+  }
+}
 .request-content {
   margin-top: 50px;
   width: 40%;
@@ -921,6 +958,7 @@ a {
 @media screen and (max-width: 768px) {
   .request-content {
     width: 100%;
+    margin-top: 10px;
   }
 }
 @media screen and (max-width: 1100px) {
