--- a/css/contact.css
+++ b/css/contact.css
@@ -80,14 +80,21 @@ a {
   display: flex;
   flex-wrap: wrap;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1300px) {
   .header-buttons {
-    display: none;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
   }
 }
 @media screen and (max-width: 1100px) {
   .header-buttons {
     margin-left: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header-buttons {
+    display: none;
   }
 }
 .header-buttons a {
@@ -98,10 +105,15 @@ a {
   border-radius: 10px;
   outline: none;
 }
+@media screen and (max-width: 1300px) {
+  .header-buttons a {
+    margin-top: 5px;
+    text-align: center;
+  }
+}
 @media screen and (max-width: 1100px) {
   .header-buttons a {
     padding: 5px;
-    margin-top: 5px;
   }
 }
 .header-mobicon {
@@ -184,6 +196,12 @@ a {
   padding: 5px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-input {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+}
 .header-links .navigation-input img {
   width: 15px;
   position: absolute;
@@ -196,13 +214,22 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.5);
   outline: none;
   padding-left: 30px;
-  padding-right: 30px;
   color: rgba(0, 0, 0, 0.5);
+}
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-input input {
+    width: 150px;
+  }
 }
 .header-links .navigation-language {
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-language {
+    margin-top: 10px;
+  }
 }
 .header-links .navigation-language img {
   margin-left: 5px;
@@ -400,6 +427,11 @@ a {
     margin-left: 50px;
   }
 }
+@media screen and (max-width: 500px) {
+  .footer-rteco__logo .rteco-logo img {
+    width: 90%;
+  }
+}
 .footer-rteco__logo .rteco-logo .color-logo {
   position: absolute;
   left: 0;
@@ -421,14 +453,29 @@ a {
 .contact-page__title img {
   margin-right: 10px;
 }
+@media screen and (max-width: 768px) {
+  .contact-page__title {
+    margin-top: 120px;
+  }
+}
 
 .contact-map {
   position: relative;
   margin-top: 100px;
 }
+@media screen and (max-width: 768px) {
+  .contact-map {
+    margin-top: 30px;
+  }
+}
 .contact-map__card {
   transform: scale(0);
   transition: all 1s ease;
+}
+@media screen and (max-width: 500px) {
+  .contact-map__card {
+    transform: translateY(80px) scale(1);
+  }
 }
 .contact-map:hover .contact-map__card {
   transform: translateY(-450px) scale(1);
@@ -448,6 +495,21 @@ a {
   flex-direction: column;
   justify-content: space-between;
   transition: all 0.5s ease-in-out;
+}
+@media screen and (max-width: 768px) {
+  .contact-map__card .card {
+    left: 20px;
+    width: 400px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .contact-map__card .card {
+    position: relative;
+    width: 100%;
+    left: 0;
+    padding: 20px;
+    height: 400px;
+  }
 }
 .contact-map__card .card-text {
   font-size: 20px;
@@ -469,8 +531,19 @@ a {
   display: flex;
   justify-content: space-around;
 }
+@media screen and (max-width: 768px) {
+  .contact {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .contact-section {
+    margin-bottom: 20px;
+  }
+}
 .contact-section__title {
   font-size: 25px;
+  margin-bottom: 20px;
 }
 .contact-section__text {
   width: 80%;
@@ -483,6 +556,22 @@ a {
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 1100px) {
+  .contact-section__inform {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contact-section__inform {
+    flex-direction: row;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .contact-section__inform {
+    flex-direction: column;
+  }
 }
 .contact-section__inform .inform-title {
   font-size: 20px;
@@ -509,11 +598,27 @@ a {
   font-weight: 700;
   margin-top: 10px;
 }
+@media screen and (max-width: 500px) {
+  .contact-section__numbers h1 {
+    font-size: 20px;
+  }
+}
 .contact-form {
   width: 40%;
   padding: 40px;
   border-radius: 10px;
   background: rgba(197, 198, 198, 0.2);
+}
+@media screen and (max-width: 1100px) {
+  .contact-form {
+    width: 70%;
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contact-form {
+    width: 100%;
+  }
 }
 .contact-form__title {
   font-size: 24px;
@@ -560,6 +665,11 @@ a {
   justify-content: space-between;
   margin-top: 30px;
 }
+@media screen and (max-width: 500px) {
+  .contact-form .form-buttons {
+    flex-direction: column;
+  }
+}
 .contact-form .form-buttons .submit {
   width: 50%;
   font-size: 18px;
@@ -569,11 +679,24 @@ a {
   background: #01a1b7;
   color: #ffffff;
 }
+@media screen and (max-width: 500px) {
+  .contact-form .form-buttons .submit {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 20px;
+  }
+}
 .contact-form .form-buttons .form-file {
   border: 2px solid #000;
   padding: 5px;
   font-size: 12px;
   border-radius: 10px;
+}
+@media screen and (max-width: 500px) {
+  .contact-form .form-buttons .form-file {
+    padding: 10px;
+    text-align: center;
+  }
 }
 .contact-form .form-buttons .form-file label {
   font-size: 16px;
