--- a/css/labaratory.css
+++ b/css/labaratory.css
@@ -80,14 +80,21 @@ a {
   display: flex;
   flex-wrap: wrap;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1300px) {
   .header-buttons {
-    display: none;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
   }
 }
 @media screen and (max-width: 1100px) {
   .header-buttons {
     margin-left: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header-buttons {
+    display: none;
   }
 }
 .header-buttons a {
@@ -98,10 +105,15 @@ a {
   border-radius: 10px;
   outline: none;
 }
+@media screen and (max-width: 1300px) {
+  .header-buttons a {
+    margin-top: 5px;
+    text-align: center;
+  }
+}
 @media screen and (max-width: 1100px) {
   .header-buttons a {
     padding: 5px;
-    margin-top: 5px;
   }
 }
 .header-mobicon {
@@ -184,6 +196,12 @@ a {
   padding: 5px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-input {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+}
 .header-links .navigation-input img {
   width: 15px;
   position: absolute;
@@ -196,13 +214,22 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.5);
   outline: none;
   padding-left: 30px;
-  padding-right: 30px;
   color: rgba(0, 0, 0, 0.5);
+}
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-input input {
+    width: 150px;
+  }
 }
 .header-links .navigation-language {
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-language {
+    margin-top: 10px;
+  }
 }
 .header-links .navigation-language img {
   margin-left: 5px;
@@ -400,6 +427,11 @@ a {
     margin-left: 50px;
   }
 }
+@media screen and (max-width: 500px) {
+  .footer-rteco__logo .rteco-logo img {
+    width: 90%;
+  }
+}
 .footer-rteco__logo .rteco-logo .color-logo {
   position: absolute;
   left: 0;
@@ -429,13 +461,29 @@ a {
   margin-top: 30px;
   display: flex;
 }
+@media screen and (max-width: 1100px) {
+  .labaratory-content {
+    flex-direction: column;
+  }
+}
 .labaratory-content__video {
   width: 60%;
+}
+@media screen and (max-width: 1100px) {
+  .labaratory-content__video {
+    width: 100%;
+  }
 }
 .labaratory-content__text {
   width: 40%;
   padding: 10px;
   margin-left: 20px;
+}
+@media screen and (max-width: 1100px) {
+  .labaratory-content__text {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 .labaratory-content__text h1 {
   font-size: 24px;
@@ -464,6 +512,11 @@ a {
   display: flex;
   justify-content: flex-end;
 }
+@media screen and (max-width: 768px) {
+  .analysis-wrapper .analysis-image {
+    display: none;
+  }
+}
 .analysis-wrapper .analysis-image img {
   width: 80%;
 }
@@ -479,6 +532,19 @@ a {
   width: 40%;
   list-style-type: disc;
 }
+@media screen and (max-width: 768px) {
+  .analysis-types .analysis-item {
+    width: 100%;
+  }
+}
+.analysis-types .analysis-item:last-child {
+  margin-left: 20px;
+}
+@media screen and (max-width: 768px) {
+  .analysis-types .analysis-item:last-child {
+    display: none;
+  }
+}
 .analysis-types .analysis-item li {
   font-size: 16px;
   font-weight: 500;
@@ -493,8 +559,7 @@ a {
 }
 
 .licenses {
-  margin-top: 70px;
-  margin-bottom: 70px;
+  margin-top: 50px;
 }
 .licenses-title {
   font-size: 25px;
@@ -504,8 +569,19 @@ a {
   justify-content: space-between;
   margin-top: 30px;
 }
+@media screen and (max-width: 500px) {
+  .licenses-content {
+    width: 300px;
+    overflow-y: auto;
+  }
+}
 .licenses-content img {
   width: 22%;
+}
+@media screen and (max-width: 500px) {
+  .licenses-content img {
+    width: 80%;
+  }
 }
 .licenses .place-for-pagination {
   margin-top: 50px;
@@ -513,6 +589,11 @@ a {
   align-items: center;
   color: #000000;
   cursor: pointer;
+}
+@media screen and (max-width: 500px) {
+  .licenses .place-for-pagination {
+    margin-top: 30px;
+  }
 }
 .licenses .place-for-pagination svg path {
   stroke: #000000;
@@ -547,6 +628,12 @@ a {
   margin-top: 50px;
   padding: 30px;
 }
+@media screen and (max-width: 768px) {
+  .accordion-wrapper {
+    padding: 0;
+    margin-bottom: 30px;
+  }
+}
 
 .accordion {
   margin-top: 30px;
@@ -564,6 +651,19 @@ a {
 }
 .accordion-header__title {
   margin-right: auto;
+}
+@media screen and (max-width: 768px) {
+  .accordion-header__title {
+    font-size: 22px;
+  }
+}
+.accordion-header h2 {
+  font-size: 28px;
+}
+@media screen and (max-width: 768px) {
+  .accordion-header h2 {
+    font-size: 18px;
+  }
 }
 .accordion-header__image {
   margin: 0 20px;
