--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -50,12 +50,18 @@
     display: flex;
     flex-wrap: wrap;
 
-    @media screen and (max-width: 768px) {
-      display: none;
+    @media screen and (max-width: 1300px) {
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto;
     }
 
     @media screen and (max-width: 1100px) {
       margin-left: 30px;
+    }
+
+    @media screen and (max-width: 768px) {
+      display: none;
     }
 
     a {
@@ -66,9 +72,12 @@
       border-radius: 10px;
       outline: none;
 
+      @media screen and (max-width: 1300px) {
+        margin-top: 5px;
+        text-align: center;
+      }
       @media screen and (max-width: 1100px) {
         padding: 5px;
-        margin-top: 5px;
       }
     }
   }
@@ -155,6 +164,11 @@
     padding: 5px;
     margin: 0 auto;
 
+    @media screen and (max-width: 1100px) {
+      margin-top: 10px;
+      margin-left: 0;
+    }
+
     img {
       width: 15px;
       position: absolute;
@@ -168,8 +182,11 @@
       border: 1px solid rgba(0, 0, 0, 0.5);
       outline: none;
       padding-left: 30px;
-      padding-right: 30px;
       color: rgba(0, 0, 0, 0.5);
+
+      @media screen and (max-width: 1100px) {
+        width: 150px;
+      }
     }
   }
 
@@ -177,6 +194,10 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+
+    @media screen and (max-width: 1100px) {
+      margin-top: 10px;
+    }
 
     img {
       margin-left: 5px;
