--- a/scss/about-us-page.scss
+++ b/scss/about-us-page.scss
@@ -183,6 +183,10 @@
     display: flex;
     align-items: center;
 
+    @media screen and (max-width: 768px) {
+      align-items: start;
+    }
+
     &-image {
       width: 100px;
       height: 100px;
@@ -192,9 +196,14 @@
       justify-content: center;
       background-color: #01a1b7;
 
+      @media screen and (max-width: 768px) {
+        width: 80px;
+        height: 60px;
+      }
+
       img {
-        width: 50px;
-        height: 50px;
+        width: 50%;
+        height: 50%;
       }
     }
 
@@ -217,6 +226,13 @@
         font-family: Montserrat;
         font-size: 12px;
         font-weight: 500;
+
+        @media screen and (max-width: 768px) {
+          width: 100%;
+          font-size: 16px;
+          margin-top: 10px;
+          color: rgba(0, 0, 0, 0.5);
+        }
       }
     }
   }
@@ -236,6 +252,11 @@
   align-items: start;
   padding: 50px;
 
+  @media screen and (max-width: 768px) {
+    padding: 10px;
+    height: fit-content;
+  }
+
   img {
     height: 40px;
   }
@@ -248,6 +269,10 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 25px;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
   }
 
   &__author {
@@ -296,6 +321,10 @@
       background: #000000;
       margin-left: 15px;
       margin-right: 15px;
+
+      @media screen and (max-width: 500px) {
+        width: 100px;
+      }
     }
   }
 }
@@ -305,11 +334,25 @@
   display: flex;
   justify-content: space-between;
 
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .image-wrapper1 {
     width: 50%;
 
+    @media screen and (max-width: 500px) {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+
     img {
       width: 95%;
+
+      @media screen and (max-width: 500px) {
+        width: 100%;
+      }
     }
   }
 
@@ -320,9 +363,17 @@
 
     width: 50%;
 
+    @media screen and (max-width: 500px) {
+      width: 100%;
+    }
+
     .image-wrapper__child1 {
       display: flex;
       justify-content: flex-end;
+
+      @media screen and (max-width: 500px) {
+        margin-bottom: 10px;
+      }
 
       img {
         width: 100%;
@@ -334,9 +385,19 @@
       justify-content: space-between;
       align-items: flex-end;
 
+      @media screen and (max-width: 500px) {
+        flex-direction: column;
+        align-items: center;
+      }
+
       img {
         width: 48%;
         height: 95%;
+
+        @media screen and (max-width: 500px) {
+          width: 100%;
+          margin-bottom: 10px;
+        }
       }
     }
   }
@@ -360,11 +421,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (max-width: 768px) {
+      flex-wrap: wrap;
+    }
   }
 
   .card {
     width: 31%;
-    margin-top: 50px;
+    margin-top: 30px;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -373,6 +438,14 @@
     border-radius: 10px;
     background: #fff;
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
+
+    @media screen and (max-width: 768px) {
+      width: 50%;
+    }
+
+    @media screen and (max-width: 500px) {
+      width: 95%;
+    }
 
     &-name {
       font-family: "Montserrat" sans-serif;
@@ -426,6 +499,10 @@
       background: #000000;
       margin-left: 15px;
       margin-right: 15px;
+
+      @media screen and (max-width: 500px) {
+        width: 100px;
+      }
     }
   }
 }
