--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -29,8 +29,16 @@
 
     display: flex;
 
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+
     .card-column {
       width: 50%;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
     }
   }
 }
@@ -44,12 +52,32 @@
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
 
   display: flex;
+
+  @media screen and (max-width: 1100px) {
+    flex-direction: column;
+    padding: 20px;
+    margin-top: 20px;
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
+
   &-content {
     margin-left: 20px;
+
+    @media screen and (max-width: 1100px) {
+      margin-left: 0;
+    }
 
     &__title {
       font-size: 18px;
       font-weight: 700;
+
+      @media screen and (max-width: 1100px) {
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
     }
 
     &__text {
@@ -81,19 +109,37 @@
     align-items: center;
     justify-content: space-between;
 
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+
     &__name {
       width: 400px;
       height: 40px;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        margin-bottom: 20px;
+      }
     }
 
     &__phone {
       width: 400px;
       height: 40px;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        margin-bottom: 20px;
+      }
     }
 
     &__email {
       width: 400px;
       height: 40px;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
     }
 
     input {
@@ -139,6 +185,10 @@
     display: flex;
     margin-top: 30px;
 
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+    }
+
     &__submit {
       button {
         background: #f4c93f;
@@ -149,6 +199,10 @@
         font-size: 16px;
         font-weight: 500;
         cursor: pointer;
+
+        @media screen and (max-width: 500px) {
+          padding: 20px 30px;
+        }
       }
     }
 
@@ -158,6 +212,13 @@
       border: 2px solid #000;
       margin: 0 0 0 20px;
       padding: 9px 20px;
+
+      @media screen and (max-width: 500px) {
+        margin-top: 20px;
+        margin-left: 0;
+        width: 45%;
+        text-align: center;
+      }
 
       input {
         width: 0;
@@ -173,8 +234,7 @@
 }
 
 .licenses {
-  margin-top: 70px;
-  margin-bottom: 70px;
+  margin-top: 50px;
 
   &-title {
     font-size: 25px;
@@ -185,8 +245,17 @@
     justify-content: space-between;
     margin-top: 30px;
 
+    @media screen and (max-width: 500px) {
+      width: 300px;
+      overflow-y: auto;
+    }
+
     img {
       width: 22%;
+
+      @media screen and (max-width: 500px) {
+        width: 80%;
+      }
     }
   }
 
@@ -196,6 +265,10 @@
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 500px) {
+      margin-top: 30px;
+    }
 
     svg path {
       stroke: #000000;
@@ -216,6 +289,10 @@
       background: #000000;
       margin-left: 15px;
       margin-right: 15px;
+
+      @media screen and (max-width: 500px) {
+        width: 100px;
+      }
     }
   }
 }
