--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -345,7 +345,7 @@
       width: 35%;
 
       @media screen and (max-width: 500px) {
-        max-width: 450px;
+        max-width: 300px;
       }
       @media screen and (max-width: 768px) {
         width: 500px;
@@ -424,7 +424,7 @@
     flex-wrap: wrap;
 
     @media screen and (max-width: 500px) {
-      width: 400px;
+      width: 300px;
       flex-wrap: nowrap;
       overflow-y: auto;
       overflow-wrap:normal;
@@ -455,7 +455,7 @@
     margin-top: 30px;
 
     @media screen and (max-width: 500px) {
-      width: 400px;
+      width: 300px;
       overflow-y: auto;
     }
 
@@ -520,6 +520,9 @@
   @media screen and (max-width: 1100px) {
       justify-content: space-evenly;
   }
+  @media screen and (max-width: 1100px) {
+      justify-content: flex-start;
+  }
 
   &-content {
     margin-top: 50px;
@@ -527,7 +530,7 @@
 
     @media screen and (max-width: 768px) {
       width: 100%;
-
+      margin-top: 10px;
     }
     @media screen and (max-width: 1100px) {
       width: 70%;
